err/pesky-settings.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pesky'...
Listing './lib/python3.5/site-packages/pesky/settings'...
Compiling './lib/python3.5/site-packages/pesky/settings/args.py'...
***   File "./lib/python3.5/site-packages/pesky/settings/args.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pesky/settings/parser.py'...
***   File "./lib/python3.5/site-packages/pesky/settings/parser.py", line 186
    print "Usage: %s %s" % (' '.join(commands), self.usage)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pesky/settings/section.py'...
***   File "./lib/python3.5/site-packages/pesky/settings/section.py", line 155
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pesky/settings/settings.py'...
***   File "./lib/python3.5/site-packages/pesky/settings/settings.py", line 70
    except getopt.GetoptError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pesky_settings-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
